[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/github-integration/scripts/GitHub.gd" type="Script" id=1]
[ext_resource path="res://addons/github-integration/resources/themes/GitHubTheme-Dark.tres" type="Theme" id=2]
[ext_resource path="res://addons/github-integration/scenes/loading.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/github-integration/scenes/Header.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/github-integration/scenes/Commit.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/github-integration/scenes/SingIn.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/github-integration/scenes/UserPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/github-integration/scenes/Repo.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/github-integration/scenes/Gist.tscn" type="PackedScene" id=9]

[node name="GitHub" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
rect_clip_content = true
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionCheck" type="HTTPRequest" parent="."]

[node name="SingIn" parent="." instance=ExtResource( 6 )]
margin_top = 48.0
rect_clip_content = true

[node name="UserPanel" parent="." instance=ExtResource( 7 )]
visible = false
margin_top = 48.0
rect_clip_content = true

[node name="Repo" parent="." instance=ExtResource( 8 )]
visible = false
margin_top = 48.0

[node name="Commit" parent="." instance=ExtResource( 5 )]
visible = false
margin_top = 48.0
rect_clip_content = true

[node name="Gist" parent="." instance=ExtResource( 9 )]
margin_top = 48.0
rect_clip_content = true
theme = ExtResource( 2 )

[node name="Header" parent="." instance=ExtResource( 4 )]
anchor_bottom = 0.0
margin_bottom = 48.0
rect_clip_content = true

[node name="loading" parent="." instance=ExtResource( 3 )]
visible = true
margin_top = 48.0
color = Color( 0, 0, 0, 0.627451 )
